--- a/shopweb/web/templates/endscripts.html
+++ b/shopweb/web/templates/endscripts.html
@@ -13,3 +13,8 @@
 
 	<!-- Main JS (Do not remove) -->
 	<script src="/static/js/main.js"></script>
+	
+	<script src="/static/js/cart.js"></script>
+	<script src="/static/js/purl.js"></script>
+	<script src="/static/js/jquery.cookie.js"></script>
+	
