--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -15,8 +15,8 @@
 						<li><a href="#">Despre Noi</a></li>
 						<li><a href="#">Promoții</a></li>
 						<li><a href="#">Blog</a></li>
-						<li><a href="#"><span class="icon-cart"></span><span
-								class="left_10">Coș</span></a></li>
+						<li><a href="/cart"><span class="icon-cart"></span><span
+								class="left_10">Coș (<span id="cart_num">0</span>)</span></a></li>
 					</ul>
 				</div>
 			</div>
