--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -984,7 +984,7 @@ ba
 	box-shadow: none;
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"]  {
 	height: 50px;
 	border: 1px solid #ccc;
 }
@@ -1283,4 +1283,41 @@ form .row {
 .top20 {
 	margin-top: 20px;
 }
+
+.icon-login {
+	font-size: 21px;
+	top: 3px;
+	position: relative;
+}
+
+.icon-cart {
+	font-size: 21px;
+	top: 4px;
+	position: relative;
+}
+
+.icon-exit {
+	font-size: 21px;
+	top: 3px;
+	position: relative;
+}
+
+.login {
+	display: none;
+	text-align: center;
+}
+.login .row * {
+	padding: 0px 10px;
+}
+
+.transport {
+	margin-left: 15px;
+}
+
+.plata {
+	margin-left: 15px;
+	font-weight: 400;
+	color: #a980cd;
+}
+
 /*# sourceMappingURL=style.css.map */
