--- a/shopweb/web/templates/endscripts.html
+++ b/shopweb/web/templates/endscripts.html
@@ -17,4 +17,5 @@
 	<script src="/static/js/cart.js"></script>
 	<script src="/static/js/purl.js"></script>
 	<script src="/static/js/jquery.cookie.js"></script>
+	<script src="/static/js/jquery.base64.min.js"></script>
 	
