--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -16,9 +16,20 @@
 						<li><a href="#">Promoții</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="/cart"><span class="icon-cart"></span><span
-								class="left_10">Coș (<span id="cart_num">0</span>)</span></a></li>
+								class="left_10">Coș (<span id="cart_num">0</span>)
+							</span></a></li>
+						<li><a id="login" href="<!-- inline:logout -->"><span class="<!-- inline:auth_class -->"></span></a></li>
 					</ul>
 				</div>
+			</div>
+			<div id="login-box" class="row login">
+				<form action="/auth" id="login_form" method="POST">
+					<div class="row">
+						<label for="username">E-mail </label><input id="username" type="text" />
+						<label for="password">Parola </label><input id="password"
+							type="password" />
+					</div>
+				</form>
 			</div>
 		</nav>
 	</div>
