--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -1320,4 +1320,10 @@ form .row {
 	color: #a980cd;
 }
 
+.empty-cart {
+	text-align: center;
+	font-size: 30px;
+	color: #a980cd;
+}
+
 /*# sourceMappingURL=style.css.map */
