--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -5,13 +5,13 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="fh5co-navbar-brand">
-						<a class="fh5co-logo" href="index.html"><img
+						<a class="fh5co-logo" href="/"><img
 							src="/static/images/logo.svg" alt="logo" width="250px" /></a>
 					</div>
 				</div>
 				<div class="col-md-9 main-nav">
 					<ul class="nav text-right">
-						<li class="active"><a href="index.html"><span>Acasâ</span></a></li>
+						<li class="active"><a href="/"><span>Acasâ</span></a></li>
 						<li><a href="#">Despre Noi</a></li>
 						<li><a href="#">Promoții</a></li>
 						<li><a href="#">Blog</a></li>
