--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -23,7 +23,6 @@ body {
 	font-weight: 300;
 }
 
-
 .intro {
 	background: #ffffff url("../images/slide.jpg") no-repeat center top;
 	width: 100%;
@@ -984,7 +983,7 @@ ba
 	box-shadow: none;
 }
 
-input[type="text"], input[type="password"]  {
+input[type="text"], input[type="password"] {
 	height: 50px;
 	border: 1px solid #ccc;
 }
@@ -1125,7 +1124,6 @@ input[type="text"], input[type="password"]  {
 	opacity: 0;
 }
 
-
 #gallery {
 	height: 121px;
 	float: left;
@@ -1133,7 +1131,7 @@ input[type="text"], input[type="password"]  {
 }
 
 #gallery ul {
-    list-style-type: none;
+	list-style-type: none;
 	padding: 0px;
 	margin: 0px;
 	float: left;
@@ -1146,13 +1144,13 @@ input[type="text"], input[type="password"]  {
 }
 
 .active img {
-    box-shadow: 0px 0px 2px 2px #ccc;
-    z-index: 100;
+	box-shadow: 0px 0px 2px 2px #ccc;
+	z-index: 100;
 }
 
 .item_pics {
 	margin: 0 auto;
-	width: 312px; 
+	width: 312px;
 }
 
 .purple {
@@ -1194,11 +1192,10 @@ input[type="text"], input[type="password"]  {
 	border-radius: 10px;
 	padding: 10px;
 	box-shadow: 0px 0px 5px 1px #ddd;
-	
 }
 
 .cart_item img {
-   float: left;	
+	float: left;
 }
 
 .cart_item .prod_price {
@@ -1213,20 +1210,21 @@ input[type="text"], input[type="password"]  {
 }
 
 .cart_item .prod_cant {
-    border: 1px solid #ddd;
+	border: 1px solid #ddd;
 }
 
-.cart_item .img_cont{
+.cart_item .img_cont {
 	height: 114px;
 	float: left;
 }
+
 .cart_item .details {
 	float: left;
 	height: 100%;
 	margin-left: 10px;
 }
 
-.cart_item .details .row span{
+.cart_item .details .row span {
 	margin-right: 10px;
 }
 
@@ -1235,45 +1233,44 @@ input[type="text"], input[type="password"]  {
 	border-radius: 5px;
 }
 
-
 .select_cont:after {
-  content: '<>';
-  font: 17px "Consolas", monospace;
-  color: #333;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-  right: 3px;
-  top: 10px;
-  padding: 0 0 2px;
-  border-bottom: 1px solid #999;
-  position: absolute;
-  pointer-events: none;
+	content: '<>';
+	font: 17px "Consolas", monospace;
+	color: #333;
+	-webkit-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+	transform: rotate(90deg);
+	right: 3px;
+	top: 10px;
+	padding: 0 0 2px;
+	border-bottom: 1px solid #999;
+	position: absolute;
+	pointer-events: none;
 }
- 
+
 .select_cont select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  display: block;
-  width: 100%;
-  height: 40px;
-  float: right;
-  padding: 0px 24px;
-  font-size: 16px;
-  line-height: 1.75;
-  color: #333;
-  background-color: #ffffff;
-  background-image: none;
-  border: 1px solid #cccccc;
-  -ms-word-break: normal;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	display: block;
+	width: 100%;
+	height: 40px;
+	float: right;
+	padding: 0px 24px;
+	font-size: 16px;
+	line-height: 1.75;
+	color: #333;
+	background-color: #ffffff;
+	background-image: none;
+	border: 1px solid #cccccc;
+	-ms-word-break: normal;
 }
 
 .select_cont {
-  position: relative;
-  float: left;
-  margin-right: 5px;
+	position: relative;
+	float: left;
+	margin-right: 5px;
 }
 
 form .row {
@@ -1306,6 +1303,7 @@ form .row {
 	display: none;
 	text-align: center;
 }
+
 .login .row * {
 	padding: 0px 10px;
 }
@@ -1324,6 +1322,29 @@ form .row {
 	text-align: center;
 	font-size: 30px;
 	color: #a980cd;
+}
+
+.description {
+	width: 100%;
+	height: 200px;
+}
+
+.pad15H {
+	padding: 0px 15px 0px 15px;
+}
+
+.margin15 {
+	margin: 15px;
+}
+
+.top15 {
+	position: relative;
+	top: 15px;
+}
+
+.upload_form_fields input[type='text'],
+.upload_form_fields select {
+	width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
