--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -31,6 +31,10 @@
 					</div>
 				</form>
 			</div>
+			<!-- snip:permissions(write) -->
+			<div class="add_prod_btn btn"> Adaugă produs </div>
+			<div class="add_cat_btn btn"> Adaugă categorie </div>
+			<!-- end -->
 		</nav>
 	</div>
 </header>
