--- a/shopweb/web/static/css/bootstrap.css
+++ b/shopweb/web/static/css/bootstrap.css
@@ -3656,7 +3656,7 @@ select[multiple].input-lg,
   touch-action: manipulation;
   cursor: pointer;
   background-image: none;
-  border: 1px solid transparent;
+  border: 1px solid #aaa;
   white-space: nowrap;
   padding: 10px 20px;
   font-size: 14px;
