--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -32,7 +32,7 @@
 				</form>
 			</div>
 			<!-- snip:permissions(write) -->
-			<a href="/createproduct"> <div class="add_prod_btn btn"> Adaugă produs </div> </a>
+			<a href="/saveproduct"> <div class="add_prod_btn btn"> Adaugă produs </div> </a>
 			<div class="add_cat_btn btn"> Adaugă categorie </div>
 			<!-- end -->
 		</nav>
