--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -12,9 +12,7 @@
 				<div class="col-md-9 main-nav">
 					<ul class="nav text-right">
 						<li class="active"><a href="/"><span>Acasâ</span></a></li>
-						<li><a href="#">Despre Noi</a></li>
-						<li><a href="#">Promoții</a></li>
-						<li><a href="#">Blog</a></li>
+						<li><a href="/aboutus">Despre Noi</a></li>
 						<li><a href="/cart"><span class="icon-cart"></span><span
 								class="left_10">Coș (<span id="cart_num">0</span>)
 							</span></a></li>
