--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -16,7 +16,8 @@
 						<li><a href="/cart"><span class="icon-cart"></span><span
 								class="left_10">Coș (<span id="cart_num">0</span>)
 							</span></a></li>
-						<li><a id="search-icon" href="#"><span class="icon-search2"></span></a></li>
+						<li><a id="search-icon" href="#"><span
+								class="icon-search2"></span></a></li>
 						<li><a id="login" href="<!-- inline:logout -->"><span
 								class="<!-- inline:auth_class -->"></span></a></li>
 					</ul>
@@ -30,10 +31,15 @@
 							id="password" type="password" />
 					</div>
 				</form>
+				<div class="row">
+					<div id="login-btn" class="btn">Login</div>
+					<a href="/newuser"><div id="new-user-btn" class="btn">Utilizator nou</div></a>
+					<div id="forgot-pass-btn" class="btn">Am uitat parola</div>
+				</div>
 			</div>
 			<div id="search-box" class="row search">
 				<div class="row">
-					<input id="search" class="" type="text" />
+					<input id="search" type="text" />
 				</div>
 			</div>
 
