--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -16,11 +16,19 @@
 						<li><a href="/cart"><span class="icon-cart"></span><span
 								class="left_10">Coș (<span id="cart_num">0</span>)
 							</span></a></li>
+						<!-- snip:logged_user -->
+						<li><a href="/settings">Contul meu</a></li>
+						<!-- end -->
 						<li><a id="search-icon" href="#"><span
 								class="icon-search2"></span></a></li>
 						<li><a id="login" href="<!-- inline:logout -->"><span
 								class="<!-- inline:auth_class -->"></span></a></li>
 					</ul>
+					<!-- snip:logged_user -->
+					<div class="welcome">
+						Bine ai venit <span></span>
+					</div>
+					<!-- end -->
 				</div>
 			</div>
 			<div id="login-box" class="row login">
@@ -33,7 +41,8 @@
 				</form>
 				<div class="row">
 					<div id="login-btn" class="btn">Login</div>
-					<a href="/newuser"><div id="new-user-btn" class="btn">Utilizator nou</div></a>
+					<a href="/newuser"><div id="new-user-btn" class="btn">Utilizator
+							nou</div></a>
 					<div id="forgot-pass-btn" class="btn">Am uitat parola</div>
 				</div>
 			</div>
