--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -17,7 +17,7 @@
 								class="left_10">Coș (<span id="cart_num">0</span>)
 							</span></a></li>
 						<!-- snip:logged_user -->
-						<li><a href="/settings">Contul meu</a></li>
+						<li><a href="/accountsettings">Contul meu</a></li>
 						<!-- end -->
 						<li><a id="search-icon" href="#"><span
 								class="icon-search2"></span></a></li>
