--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -1,5 +1,10 @@
 
+<div id="notice_e"></div>
+<div id="notice_connect_e" data-snip="connect_error"></div>
+<div id="notice_i"></div>
+
 <header role="banner" id="fh5co-header">
+
 	<div class="container">
 		<nav class="navbar navbar-default">
 			<div class="row">
