--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -1387,4 +1387,21 @@ form .row {
 	font-size: 14px;
 	float: right;
 }
+
+#notice_i {
+	background-color: #000;
+	color: #ffffff;
+    opacity: 0.6;
+	font-size: 20px;
+	height: 36px;
+	padding-top: 0px;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	text-align: center;
+	width: 100%;
+	display: none;
+	z-index: 9999;
+}
+
 /*# sourceMappingURL=style.css.map */
