--- a/shopweb/web/templates/footermenu.html
+++ b/shopweb/web/templates/footermenu.html
@@ -17,9 +17,9 @@
 				<div class="holder-section">
 					<h3>Condiții</h3>
 					<ul>
-						<li><a href="#">Termeni și condiții</a></li>
-						<li><a href="#">Protecția datelor</a></li>
-						<li><a href="#">Politica de retur</a></li>
+						<li><a href="/terms">Termeni și condiții</a></li>
+						<li><a href="/dataprotection">Protecția datelor</a></li>
+						<li><a href="/returnpolicy">Politica de retur</a></li>
 					</ul>
 				</div>
 			</div>
@@ -29,7 +29,7 @@
 				<div class="holder-section">
 					<h3>Info</h3>
 					<ul>
-						<li><a href="#">Cookie-uri</a></li>
+						<li><a href="/cookies">Cookie-uri</a></li>
 						<li><a href="http://www.anpc.gov.ro/">ANPC</a></li>
 					</ul>
 				</div>
