--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -53,7 +53,7 @@
 			</div>
 			<div id="search-box" class="row search">
 				<div class="row">
-					<input id="search" type="text" />
+					<input id="search" type="text" placeholder="Căutare produse"/>
 				</div>
 			</div>
 
