--- a/shopweb/web/static/css/bootstrap.css
+++ b/shopweb/web/static/css/bootstrap.css
@@ -3648,6 +3648,7 @@ select[multiple].input-lg,
 }
 
 .btn {
+  color: #000;	
   display: inline-block;
   margin-bottom: 0;
   font-weight: normal;
