--- a/shopweb/web/templates/footer.html
+++ b/shopweb/web/templates/footer.html
@@ -5,10 +5,10 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<p>
 						Copyright 2016 <a href="#">IDID</a>. Toate drepturile rezervate<br />
-						Web design realizat de <a href="http://badass-webdesign.ro/"
-							target="_blank"><img
-							src="/static/images/badass-web-design.gif" alt="web design"
-							style="vertical-align: middle;" /></a>
+						Web design realizat de <a href="http://media90.ro/"
+							target="_blank">Creare site <img
+							src="http://media90.ro/media90-negru.png"
+							alt="Creare site Media 90" style="vertical-align: middle;" /></a>
 					</p>
 					<p class="fh5co-social-icons">
 						<a href="#"><i class="icon-twitter-with-circle"></i></a> <a
