--- a/shopweb/web/templates/footer.html
+++ b/shopweb/web/templates/footer.html
@@ -6,7 +6,7 @@
 					<p>
 						Copyright 2016 <a href="#">IDID</a>. Toate drepturile rezervate<br />
 						Web design realizat de <a href="http://media90.ro/"
-							target="_blank">Creare site <img
+							target="_blank"><img
 							src="http://media90.ro/media90-negru.png"
 							alt="Creare site Media 90" style="vertical-align: middle;" /></a>
 					</p>
