--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -1,7 +1,7 @@
 
 <div id="notice_e"></div>
 <div id="notice_connect_e" data-snip="connect_error"></div>
-<div id="notice_i"></div>
+<div id="notice_i"><span></span></div>
 
 <header role="banner" id="fh5co-header">
 
