--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -163,7 +163,7 @@ table tr th {
 				</tr>
 				<!-- snip:content -->
 				<tr>
-					<td align="center"><img width="50" height="57" /></td>
+                    <td align="center"><a class="page"><img width="50" height="57"/></a></td>
 					<td align="center" class="c1"></td>
 					<td align="center" class="c2"></td>
 					<td align="center" class="c3"></td>
