--- a/shopweb/web/templates/footer.html
+++ b/shopweb/web/templates/footer.html
@@ -7,8 +7,8 @@
 						Copyright 2016 <a href="#">IDID</a>. Toate drepturile rezervate<br />
 						Web design realizat de <a href="http://media90.ro/"
 							target="_blank"><img
-							src="http://media90.ro/media90-negru.png"
-							alt="Creare site Media 90" style="vertical-align: middle;" /></a>
+                            src="http://media90.ro/media90-negru.png"
+                            alt="MEDIA90" style="vertical-align: middle;"/></a>
 					</p>
 					<p class="fh5co-social-icons">
 						<a href="#"><i class="icon-twitter-with-circle"></i></a> <a
