--- a/shopweb/web/templates/footermenu.html
+++ b/shopweb/web/templates/footermenu.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-4 animate-box">
+		<div class="col-md-3 animate-box">
 			<div class="fh5co-inner">
 				<div class="holder-section">
 					<h3>Contact</h3>
@@ -12,7 +12,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-4 animate-box">
+		<div class="col-md-3 animate-box">
 			<div class="fh5co-inner">
 				<div class="holder-section">
 					<h3>Condiții</h3>
@@ -24,7 +24,23 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-4 animate-box">
+		<div class="col-md-3 animate-box">
+			<div class="fh5co-inner">
+				<div class="holder-section">
+					<h3>Facebook</h3>
+					<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=958732510907548";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-page" data-href="https://www.facebook.com/idid.ro/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/idid.ro/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/idid.ro/">I did</a></blockquote></div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3 animate-box">
 			<div class="fh5co-inner">
 				<div class="holder-section">
 					<h3>Info</h3>
