--- a/shopweb/web/templates/footer.html
+++ b/shopweb/web/templates/footer.html
@@ -4,16 +4,11 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<p>
-						Copyright 2016 <a href="#">IDID</a>. Toate drepturile rezervate<br />
+						Copyright 2017 <a href="http://idid.ro/">IDID</a>. Toate drepturile rezervate<br />
 						Web design realizat de <a href="http://media90.ro/"
 							target="_blank"><img
                             src="http://media90.ro/media90-negru.png"
                             alt="MEDIA90" style="vertical-align: middle;"/></a>
-					</p>
-					<p class="fh5co-social-icons">
-						<a href="#"><i class="icon-twitter-with-circle"></i></a> <a
-							href="#"><i class="icon-facebook-with-circle"></i></a> <a
-							href="#"><i class="icon-instagram-with-circle"></i></a>
 					</p>
 				</div>
 			</div>
