--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -64,7 +64,9 @@
             <a href="/saveproduct">
                 <div class="add_prod_btn btn">Adaugă produs</div>
             </a>
-            <div class="add_cat_btn btn">Adaugă categorie</div>
+            <a href="/savecategory">
+                <div class="add_cat_btn btn">Adaugă categorie</div>
+            </a>
             <!-- end -->
         </nav>
     </div>
