--- a/shopweb/web/templates/menu.html
+++ b/shopweb/web/templates/menu.html
@@ -29,6 +29,7 @@
                     <ul class="nav text-right">
                         <li class="active"><a href="/"><span>Acasă / Magazin</span></a></li>
                         <li><a href="/aboutus">Despre Noi</a></li>
+                        <li><a href="http://blog.idid.ro" target="_blank">Blog</a></li>
                         <li><a href="/cart"><span class="icon-cart"></span><span
                                 class="left_10">Coș (<span id="cart_num">0</span>)
 							</span></a></li>
