--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .bg-cat {
-	background: url("../images/bg-cat.jpg") repeat-x center top;
+	# background: url("../images/bg-cat.jpg") repeat-x center top;
 	padding: 0px solid #fff;
 	border-left: 15px solid #fff;
 	border-right: 15px solid #fff;
@@ -1348,7 +1348,7 @@ form .row {
 
 
 .login .box div form label {
-    padding-right: 20px;
+    padding-right: 300px;
 }
 
 .search {
